--- a/style.css
+++ b/style.css
@@ -372,6 +372,39 @@ input[type="radio"] {
         margin-bottom: 30px;
     }
     
+    /* Первый блок - изображение слева (как на компьютере) */
+    .content-section:first-child {
+        flex-direction: column;
+    }
+    .content-section:first-child .section-image {
+        order: 1;
+    }
+    .content-section:first-child .section-text {
+        order: 2;
+    }
+    
+    /* Второй блок - изображение справа (как на компьютере) */
+    #register {
+        flex-direction: column;
+    }
+    #register .section-text {
+        order: 1;
+    }
+    #register .section-image {
+        order: 2;
+    }
+    
+    /* Третий блок - изображение слева (как на компьютере) */
+    #vote {
+        flex-direction: column;
+    }
+    #vote .section-image {
+        order: 1;
+    }
+    #vote .section-text {
+        order: 2;
+    }
+    
     .section-image {
         flex: none;
         width: 100%;
